; File: res://ArenaAutoGen.tscn
[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://System quarters/BluePrint/ArenaAutoGen.gd" id="1"]

[node name="ArenaAutoGen" type="Node3D"]
script = ExtResource("1")
origin_mode = 0
origin_offset = Vector3(0, 0, 0)
cell_size = 2.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = Environment.new()

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D( Basis( 0.965926, 0, -0.258819, 0.12941, 0.866025, 0.482963, 0.224144, -0.5, 0.836516 ), Vector3( 0, 20, 0 ) )
light_energy = 2.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D( Basis( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025 ), Vector3( 0, 18, 18 ) )
current = true

[node name="Arena" type="Node3D" parent="."]

[node name="FloorTiles" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Floor_full" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Floor_edge" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Floor_corner" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Floor_inverse_corner" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Floor_checker" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Piece_2x2_full" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Piece_3x1_edge" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="Piece_2x2_bay" type="MultiMeshInstance3D" parent="Arena"]
visible = true

[node name="WallTiles" type="MultiMeshInstance3D" parent="Arena"]
visible = true
